Fixes 'TIMING DIAGRAM' overlapping to one more template in the screen sizes 1143px or less

--- a/simulator/src/css/main.stylesheet.css
+++ b/simulator/src/css/main.stylesheet.css
@@ -704,7 +704,11 @@ div.icon img {
   left: 300px;
   top: 90px;
 }
-
+@media screen and (max-width:1143px) {
+  .timing-diagram-panel{
+    left: 100px;
+  }
+}
 @media screen and (max-width:991px) {
   .timing-diagram-panel{
     left: 200px;
